--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,7 +5,8 @@
     },
     "extends": [
         "standard-with-typescript",
-        "plugin:react/recommended"
+        "plugin:react/recommended",
+        "plugin:i18next/recommended"
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
@@ -13,7 +14,8 @@
         "project": ["./tsconfig.json"]
     },
     "plugins": [
-        "react"
+        "react",
+        "i18next"
     ],
     "rules": {
         "no-use-before-define": "off",
@@ -33,6 +35,7 @@
         "react/jsx-props-no-spreading": "warn",
         "@typescript-eslint/no-floating-promises": "warn",
         "@typescript-eslint/naming-convention": "off",
-        "@typescript-eslint/consistent-type-assertions": "off"
+        "@typescript-eslint/consistent-type-assertions": "off",
+        "i18next/no-literal-string": ["error", {"markupOnly": true}]
     }
 }
