--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,8 @@
     ],
     "parserOptions": {
         "ecmaVersion": "latest",
-        "sourceType": "module",
-        "project": ["./tsconfig.json"]
+        "sourceType": "module"
+        // "project": ["./tsconfig.json"]
     },
     "plugins": [
         "react",
@@ -38,6 +38,6 @@
         "@typescript-eslint/consistent-type-assertions": "off",
         "i18next/no-literal-string": ["error", {"markupOnly": true}],
         "@typescript-eslint/explicit-function-return-type": "off",
-        "n/handle-callback-err": "off" 
+        "n/handle-callback-err": "off"
     }
 }
