--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "test:ui": "npx loki test",
     "test:ui:ok": "npx loki approve",
-    "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
+    "test:ui:ci": "concurrently --kill-others \"npm run storybook\" \"npm run test:ui\"",
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
     "storybook:build": "storybook build -c ./config/storybook"
   },
@@ -51,6 +51,7 @@
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "babel-loader": "^9.1.3",
     "babel-plugin-i18next-extract": "^0.9.0",
+    "concurrently": "^8.2.2",
     "css-loader": "^6.8.1",
     "eslint": "^8.47.0",
     "eslint-config-standard-with-typescript": "^38.0.0",
