--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,3 +30,5 @@ jobs:
         run: npm run test:unit
       - name: screenshot testing 
         run: npm run test:ui:live
+        env:
+          FORCE_COLOR: true
