--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,7 +28,7 @@ jobs:
         run: npm run lint:scss
       - name: unit testing
         run: npm run test:unit
+      - name: build storybook 
+        run: npm run storybook:build
       - name: screenshot testing 
-        run: npm run test:ui:live
-        env:
-          FORCE_COLOR: true
+        run: npm run test:ui:ci 
