--- a/package.json
+++ b/package.json
@@ -101,7 +101,7 @@
   "loki": {
     "configurations": {
       "chrome.laptop": {
-        "target": "chrome.docker",
+        "target": "chrome.app",
         "width": 1366,
         "height": 768,
         "deviceScaleFactor": 1,
@@ -110,6 +110,9 @@
       "chrome.iphone7": {
         "target": "chrome.docker",
         "preset": "iPhone 7"
+      },
+      "looks-same": {
+        "ignoreCaret": true
       }
     }
   }
