Add loki reference

--- a/package.json
+++ b/package.json
@@ -108,7 +108,7 @@
         "mobile": false
       },
       "chrome.iphone7": {
-        "target": "chrome.docker",
+        "target": "chrome.app",
         "preset": "iPhone 7"
       }
     }
