Add reg-cli reports

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - name: install modules
         run: npm install
-        if: always()
       - name: build production project
         run: npm run build:prod
         if: always()
@@ -33,5 +32,9 @@ jobs:
       - name: unit testing
         run: npm run test:unit
         if: always()
-      - name: screenshot testing 
-        run: npm run test:ui:live
+      - name: build storybook
+        run: npm run storybook:build
+        if: always()
+      - name: screenshot testing
+        run: npm run test:ui:ci
+        if: always()
