--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "test:ui:ok": "npx loki approve",
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
     "test:ui:live": "concurrently -s first -k \"npm run storybook\" \"npm run test:ui\"",
+    "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
+    "test:ui:json": "node .\\scripts\\generate-visual-json-report.js",
+    "test:ui:html": "npx reg-cli --from .\\.loki\\report.json --report .\\.loki\\report.html",
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
     "storybook:build": "storybook build -c ./config/storybook"
   },
@@ -69,6 +72,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "loki": "^0.32.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "reg-cli": "^0.17.7",
     "sass": "^1.64.2",
     "sass-loader": "^13.3.2",
     "storybook": "^7.4.2",
