--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "webpack serve --env port=3000",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
+    "start:dev:server": "node ./json-server/index.js",
     "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
     "lint:ts:fix": "npx eslint \"**/*.{ts,tsx}\" --fix",
     "lint:scss": "npx stylelint \"**/*.scss\"",
@@ -20,7 +21,8 @@
     "test:ui:json": "node .\\scripts\\generate-visual-json-report.js",
     "test:ui:html": "npx reg-cli --from .\\.loki\\report.json --report .\\.loki\\report.html",
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
-    "storybook:build": "storybook build -c ./config/storybook"
+    "storybook:build": "storybook build -c ./config/storybook",
+    "server:start": "json-server --watch .\\json-server\\db.json --port 5000"
   },
   "keywords": [],
   "author": "",
@@ -71,6 +73,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "json-server": "^0.17.4",
     "loki": "^0.32.0",
     "mini-css-extract-plugin": "^2.7.6",
     "reg-cli": "^0.17.7",
