--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test:ui:html": "npx reg-cli --from .\\.loki\\report.json --report .\\.loki\\report.html",
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
     "storybook:build": "storybook build -c ./config/storybook",
-    "server:start": "json-server --watch .\\json-server\\db.json --port 5000"
+    "server:start": "json-server --watch .\\json-server\\db.json --port 5000",
+    "prepare": "husky install"
   },
   "keywords": [],
   "author": "",
@@ -90,7 +91,8 @@
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "webpack-dev-server": "^4.15.1",
+    "husky": "^8.0.0"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.7",
