--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -94,7 +94,8 @@
                 "**/src/**/*.{test, stories}.{ts,tsx}"
             ],
             "rules": {
-                "i18next/no-literal-string": "off"
+                "i18next/no-literal-string": "off",
+                "@typescript-eslint/unbound-method": "off"
             },
             "extends": [
                 "plugin:@typescript-eslint/recommended",
