--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
     "build:prod": "webpack --env mode=production",
     "build:dev": "webpack --env mode=development",
     "start:dev:server": "node ./json-server/index.js",
@@ -78,6 +79,7 @@
     "json-server": "^0.17.4",
     "loki": "^0.32.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "react-refresh": "^0.14.0",
     "reg-cli": "^0.17.7",
     "sass": "^1.64.2",
     "sass-loader": "^13.3.2",
