--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -82,7 +82,8 @@
             "checksVoidReturn": false
             }
         ],
-        "@typescript-eslint/no-invalid-void-type": "off"
+        "@typescript-eslint/no-invalid-void-type": "off",
+        "@typescript-eslint/prefer-nullish-coalescing": "warn"
     },
     "ignorePatterns": [
         "webpack.config.ts",
