--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve --env port=3000",
     "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
-    "build:prod": "webpack --env mode=production",
+    "build:prod": "webpack --env mode=production apiUrl=https://florist-test-server-5xnhbyzzd-aliaksandrs-projects-01f15d90.vercel.app",
     "build:dev": "webpack --env mode=development",
     "start:dev:server": "node ./json-server/index.js",
     "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
@@ -60,6 +60,7 @@
     "babel-loader": "^9.1.3",
     "babel-plugin-i18next-extract": "^0.9.0",
     "concurrently": "^8.2.2",
+    "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.47.0",
     "eslint-config-standard-with-typescript": "^38.0.0",
