--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "webpack serve --env port=3000",
     "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
-    "build:prod": "webpack --env mode=production apiUrl=https://florist-test-server-5xnhbyzzd-aliaksandrs-projects-01f15d90.vercel.app",
+    "build:prod": "webpack --env mode=production --env apiUrl=https://florist-test-server-5xnhbyzzd-aliaksandrs-projects-01f15d90.vercel.app",
     "build:dev": "webpack --env mode=development",
     "start:dev:server": "node ./json-server/index.js",
     "lint:ts": "npx eslint \"**/*.{ts,tsx}\"",
