--- a/package.json
+++ b/package.json
@@ -107,7 +107,8 @@
     "react-dom": "^18.2.0",
     "react-i18next": "^13.1.2",
     "react-redux": "^8.1.3",
-    "react-router-dom": "^6.14.2"
+    "react-router-dom": "^6.14.2",
+    "react-virtuoso": "^4.6.2"
   },
   "overrides": {
     "loki": {
