--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -88,7 +88,8 @@
     },
     "ignorePatterns": [
         "webpack.config.ts",
-        "**/config/**/*"
+        "**/config/**/*",
+        "**/scripts/**/*.js"
     ],
     "overrides": [
         {
