--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "sass": "^1.64.2",
     "sass-loader": "^13.3.2",
     "storybook": "^7.4.2",
+    "storybook-addon-mock": "^4.3.0",
     "storybook-react-context": "^0.6.0",
     "style-loader": "^3.3.3",
     "stylelint": "^15.10.3",
