--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@svgr/webpack": "^8.1.0",
     "@testing-library/jest-dom": "^6.1.3",
     "@testing-library/react": "^14.1.2",
+    "@types/circular-dependency-plugin": "^5.0.8",
     "@types/jest": "^29.5.4",
     "@types/node": "^20.4.6",
     "@types/react": "^18.2.18",
@@ -60,6 +61,7 @@
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "babel-loader": "^9.1.3",
     "babel-plugin-i18next-extract": "^0.9.0",
+    "circular-dependency-plugin": "^5.2.2",
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
