Add vite for development mode

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "@/*": ["./src/*"]
     },
     "strictNullChecks": true,
-    "isolatedModules": true
+    "isolatedModules": true,
+    "types": ["vite-plugin-svgr/client"]
   },
   "ts-node": {
     "compilerOptions": {
