--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack serve --env port=3000",
+    "start:vite": "vite",
     "start:dev": "concurrently \"npm start\" \"npm run start:dev:server\"",
+    "start:dev:vite": "concurrently \"npm run start:vite\" \"npm run start:dev:server\"",
     "build:prod": "webpack --env mode=production --env apiURL=https://florist-test-server.vercel.app",
     "build:dev": "webpack --env mode=development",
     "start:dev:server": "node ./json-server/index.js",
@@ -61,6 +63,7 @@
     "@types/webpack-bundle-analyzer": "^4.6.0",
     "@types/webpack-dev-server": "^4.7.2",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@vitejs/plugin-react": "^4.2.1",
     "babel-loader": "^9.1.3",
     "babel-plugin-i18next-extract": "^0.9.0",
     "circular-dependency-plugin": "^5.2.2",
@@ -101,6 +104,8 @@
     "ts-morph": "^21.0.1",
     "ts-node": "^10.9.1",
     "typescript": "^5.1.6",
+    "vite": "^5.0.10",
+    "vite-plugin-svgr": "^4.2.0",
     "webpack": "^5.88.2",
     "webpack-bundle-analyzer": "^4.9.1",
     "webpack-cli": "^5.1.4",
