Add star rating, add Rating entity and rating card

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -90,7 +90,8 @@
         "webpack.config.ts",
         "**/config/**/*",
         "**/scripts/**/*.js",
-        "**/scripts/**/*.ts"
+        "**/scripts/**/*.ts",
+        "vite.config.ts"
     ],
     "overrides": [
         {
