Refactor public api for shared ui

--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "@testing-library/react": "^14.1.2",
     "@types/circular-dependency-plugin": "^5.0.8",
     "@types/jest": "^29.5.4",
-    "@types/node": "^20.4.6",
+    "@types/node": "^20.10.6",
     "@types/react": "^18.2.18",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-dom": "^5.3.3",
@@ -90,6 +90,7 @@
     "json-server": "^0.17.4",
     "loki": "^0.32.0",
     "mini-css-extract-plugin": "^2.7.6",
+    "path": "^0.12.7",
     "react-refresh": "^0.14.0",
     "reg-cli": "^0.17.7",
     "sass": "^1.64.2",
