--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,7 +20,8 @@
         "react",
         "i18next",
         "@typescript-eslint",
-        "react-hooks"
+        "react-hooks",
+        "unused-imports"
     ],
     "globals": {
         "__IS_DEV__": true,
@@ -57,6 +58,7 @@
         "import/no-unresolved": "off",
         "no-unused-vars": "off",
         "@typescript-eslint/no-unused-vars": "warn",
+        "unused-imports/no-unused-imports": "error",
         "react/require-default-props": "off",
         "react/jsx-props-no-spreading": "off",
         "@typescript-eslint/no-floating-promises": "warn",
