--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "jest-environment-jsdom": "^29.7.0",
     "jest-html-reporters": "^3.1.7",
     "json-server": "^0.17.4",
+    "lint-staged": "^15.2.0",
     "loki": "^0.32.0",
     "mini-css-extract-plugin": "^2.7.6",
     "path": "^0.12.7",
@@ -129,6 +130,9 @@
     "react-redux": "^8.1.3",
     "react-router-dom": "^6.14.2",
     "react-virtuoso": "^4.6.2"
+  },
+  "lint-staged": {
+    "**/*.{ts,tsx}": "eslint"
   },
   "overrides": {
     "loki": {
