Fix unit errors

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test:ui:ci": "npx loki --requireReference --reactUri file:./storybook-static",
     "test:ui:live": "concurrently -s first -k \"npm run storybook\" \"npm run test:ui\"",
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
-    "test:ui:json": "node .\\scripts\\generate-visual-json-report.js",
+    "test:ui:json": "node /scripts/generate-visual-json-report.js",
     "test:ui:html": "npx reg-cli --from .\\.loki\\report.json --report .\\.loki\\report.html",
     "storybook": "storybook dev -p 6006 -c ./config/storybook",
     "storybook:build": "storybook build -c ./config/storybook",
