Add report to ci

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "test:ui:report": "npm run test:ui:json && npm run test:ui:html",
     "test:ui:json": "node scripts/generate-visual-json-report.js",
     "test:ui:html": "npx reg-cli --from .loki/report.json --report .loki/report.html",
-    "storybook": "storybook -p 6006 -c ./config/storybook",
+    "storybook": "storybook dev -p 6006 -c ./config/storybook",
     "storybook:build": "storybook build -c ./config/storybook",
     "server:start": "json-server --watch .\\json-server\\db.json --port 5000",
     "prepare": "husky install",
