--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -93,7 +93,8 @@
         "**/config/**/*",
         "**/scripts/**/*.js",
         "**/scripts/**/*.ts",
-        "vite.config.ts"
+        "vite.config.ts",
+        "**/cypress/**/*"
     ],
     "overrides": [
         {
