--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "lint:scss:fix": "npx stylelint \"**/*.scss\" --fix",
     "test:unit": "jest --config ./config/jest/jest.config.ts",
     "test:ui": "npx loki test",
+    "test:e2e": "cypress open",
     "test:ui:ok": "npx loki approve",
     "test:ui:ci": "loki --requireReference --reactUri file:./storybook-static",
     "test:ui:live": "concurrently -s first -k \"npm run storybook\" \"npm run test:ui\"",
@@ -72,6 +73,7 @@
     "copy-webpack-plugin": "^11.0.0",
     "creevey": "^0.8.1",
     "css-loader": "^6.8.1",
+    "cypress": "^13.6.3",
     "eslint": "^8.47.0",
     "eslint-config-standard-with-typescript": "^38.0.0",
     "eslint-plugin-i18next": "^6.0.3",
@@ -140,7 +142,7 @@
       "@storybook/react": "$@storybook/react"
     }
   },
-   "loki": {
+  "loki": {
     "configurations": {
       "chrome.laptop": {
         "target": "chrome.docker",
