Add article and article details e2e tests

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -94,7 +94,8 @@
         "**/scripts/**/*.js",
         "**/scripts/**/*.ts",
         "vite.config.ts",
-        "**/cypress/**/*"
+        "**/cypress/**/*",
+        "cypress.config.ts"
     ],
     "overrides": [
         {
