--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,14 @@ server {
 
         server_name ts-app.ru www.ts-app.ru;
 
+        location  ~ ^/api/(.*)$ {
+            proxy_pass   $scheme://45.90.34.230:8443/$1;
+            proxy_redirect     off;
+            proxy_set_header   Host             $host;
+            proxy_set_header   X-Real-IP        $remote_addr;
+            proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+        }
+
         location / {
                 try_files $uri $uri/ /index.html;
         }
