--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,25 @@
 server {
+
+
         root /var/www/ts_app/html;
 
         index index.html index.htm index.nginx-debian.html;
 
         server_name ts-app.ru www.ts-app.ru;
 
-        location  ~ ^/api/(.*)$ {
-            proxy_pass   $scheme://45.90.34.230:8443/$1;
-            proxy_redirect     off;
-            proxy_set_header   Host             $host;
-            proxy_set_header   X-Real-IP        $remote_addr;
-            proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
+        location ~ ^/api/(.*)$ {
+                proxy_pass   $scheme://45.90.34.230:8443/$1$is_args$args;
+                proxy_redirect     off;
+                proxy_set_header   Host             $host;
+                proxy_set_header   X-Real-IP        $remote_addr;
+                proxy_set_header   X-Forwarded-For  $proxy_add_x_forwarded_for;
         }
 
         location / {
                 try_files $uri $uri/ /index.html;
         }
 
-    listen [::]:443 ssl ipv6only=on; # managed by Certbot
+    listen [::]:443 ssl; # managed by Certbot
     listen 443 ssl; # managed by Certbot
     ssl_certificate /etc/letsencrypt/live/ts-app.ru/fullchain.pem; # managed by Certbot
     ssl_certificate_key /etc/letsencrypt/live/ts-app.ru/privkey.pem; # managed by Certbot
@@ -30,12 +32,14 @@ server {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
+
     if ($host = ts-app.ru) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
-        listen 80 default_server;
-        listen [::]:80 default_server;
+
+        listen 80;
+        listen [::]:80;
 
         server_name ts-app.ru www.ts-app.ru;
     return 404; # managed by Certbot
