--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "server:start": "json-server --watch .\\json-server\\db.json --port 5000",
         "prepare": "husky install",
         "generate:slice": "node ./scripts/createSlice/index.js",
-        "postinstall": "node ./scripts/clear-cache.js"
+        "postinstall": "node ./scripts/clear-cache.js",
+        "remove-feature": "ts-node ./scripts/remove-features.ts"
     },
     "keywords": [],
     "author": "",
